--- a/index.html
+++ b/index.html
@@ -87,75 +87,105 @@
             <div class="services-content-container">
                 <div class="services-navbar">
                     <ul class="services-navbar-items">
-                        <li class="services-navbar-item">
+                        <li class="services-navbar-item" name="instalacja-gazowa">
                             <div class="navbar-left-color active-service"></div>
                             <a>Instalacja gazowa</a>
                         </li>
-                        <li class="services-navbar-item">
+                        <li class="services-navbar-item" name="instalacja-grzejnikowa">
                             <div class="navbar-left-color"></div>
                             <a>Instalacja grzejnikowa</a>
                         </li>
-                        <li class="services-navbar-item">
+                        <li class="services-navbar-item" name="instalacja-ogrzewania">
                             <div class="navbar-left-color"></div>
                             <a>Instalacja ogrzewania podłogowego</a>
                         </li>
-                        <li class="services-navbar-item">
+                        <li class="services-navbar-item" name="instalacja-wodno">
                             <div class="navbar-left-color"></div>
                             <a>Instalacja wodno-kanalizacyjna</a>
                         </li>
-                        <li class="services-navbar-item">
+                        <li class="services-navbar-item" name="kolektory">
                             <div class="navbar-left-color"></div>
                             <a>Kolektory słoneczne</a>
                         </li>
-                        <li class="services-navbar-item">
+                        <li class="services-navbar-item" name="oczyszczalnie">
                             <div class="navbar-left-color"></div>
                             <a>Oczyszczalnie i szamba</a>
                         </li>
-                        <li class="services-navbar-item">
+                        <li class="services-navbar-item" name="pompy">
                             <div class="navbar-left-color"></div>
                             <a>Pompy ciepła</a>
                         </li>
-                        <li class="services-navbar-item">
+                        <li class="services-navbar-item" name="serwis">
                             <div class="navbar-left-color"></div>
                             <a>Serwis</a>
                         </li>
-                        <li class="services-navbar-item">
+                        <li class="services-navbar-item" name="fotowoltaika">
                             <div class="navbar-left-color"></div>
                             <a>Fotowoltaika</a>
                         </li>
                     </ul>
                 </div> 
                 <div class="services-content">
-                    <h1 class="services-content-header">Instalacja gazowa</h1>
-                    <p class="services-content-main-text">Gaz ziemny jest wyjątkowo wszechstronnym,
-                        wydajnym i przyjaznym dla środowska nośnikiem energii.
-                        Przy wykonywaniu instalacji gazowych zaufaliśmy wielu
-                        uznanym i doświadczonym firmom m. in. Beretta oraz Vaillant.
-                        Procudenci tych kotłów są potentami na płaszczyźnie instalacji gazowych. 
-                        Wyróżniają sie oni ogromnym doświadczeniem oraz znajomością potrzeb rynku.<br /> <br />
+                    <div class="instalacja-gazowa">
+                        <h1 class="services-content-header">Instalacja gazowa</h1>
+                        <p class="services-content-main-text">Gaz ziemny jest wyjątkowo wszechstronnym,
+                            wydajnym i przyjaznym dla środowska nośnikiem energii.
+                            Przy wykonywaniu instalacji gazowych zaufaliśmy wielu
+                            uznanym i doświadczonym firmom m. in. Beretta oraz Vaillant.
+                            Procudenci tych kotłów są potentami na płaszczyźnie instalacji gazowych. 
+                            Wyróżniają sie oni ogromnym doświadczeniem oraz znajomością potrzeb rynku.<br /> <br />
 
-                        W ciągu kilkunasotletniej naszej działalności zamontowaliśmy i uruchomiliśmy 
-                        setki takich kotłów, dlatego wiemy jak zaspokić Państwa potrzeby. 
-                        Naszym atutem jest też posiadanie własnego zespołu Serwisantów, 
-                        którzy znają się na swoim fachu i pomogą wyjść z każdej opresji.
-                     </p>
+                            W ciągu kilkunasotletniej naszej działalności zamontowaliśmy i uruchomiliśmy 
+                            setki takich kotłów, dlatego wiemy jak zaspokić Państwa potrzeby. 
+                            Naszym atutem jest też posiadanie własnego zespołu Serwisantów, 
+                            którzy znają się na swoim fachu i pomogą wyjść z każdej opresji.
+                        </p>
 
-                     <div class="img-box">
-                        <a target="_blank" href="images/ig.jpg">
-                            <img src="images/ig.jpg" alt="ab1" class="article-img">
-                        </a>
-                        <a target="_blank" href="images/ig2.jpg">
-                            <img src="images/ig2.jpg" alt="ab1" class="article-img">
-                        </a>
-                        <a target="_blank" href="images/ig3.jpg">
-                            <img src="images/ig3.jpg" alt="ab2" class="article-img">
-                        </a>
-                        <a target="_blank" href="images/ig4.jpg">
-                            <img src="images/ig4.jpg" alt="ab4" class="article-img">
-                        </a>
+                        <div class="img-box">
+                            <a target="_blank" href="images/ig.jpg">
+                                <img src="images/ig.jpg" alt="ab1" class="article-img">
+                            </a>
+                            <a target="_blank" href="images/ig2.jpg">
+                                <img src="images/ig2.jpg" alt="ab1" class="article-img">
+                            </a>
+                            <a target="_blank" href="images/ig3.jpg">
+                                <img src="images/ig3.jpg" alt="ab2" class="article-img">
+                            </a>
+                            <a target="_blank" href="images/ig4.jpg">
+                                <img src="images/ig4.jpg" alt="ab4" class="article-img">
+                            </a>
+                        </div>
+                    </div>
+
+
+                    <div class="instalacja-grzejnikowa hidden">
+                        <h1 class="services-content-header">Instalacja grzejnikowa</h1>
+                    </div>
+                    <div class="instalacja-ogrzewania hidden">
+                        <h1 class="services-content-header">Instalacja ogrzewania podłogowego</h1>
+                    </div>
+                    <div class="instalacja-wodno hidden">
+                        <h1 class="services-content-header">Instalacja wodno-kanalizacyjna</h1>
+                    </div>
+                    <div class="kolektory hidden">
+                        <h1 class="services-content-header">Kolektory słoneczne</h1>
+                    </div>
+                    <div class="oczyszczalnie hidden">
+                        <h1 class="services-content-header">Oczyszczalnie i szamba</h1>
+                    </div>
+                    <div class="pompy hidden">
+                        <h1 class="services-content-header">Pompy ciepła</h1>
+                    </div>
+                    <div class="serwis hidden">
+                        <h1 class="services-content-header">Serwis</h1>
+                    </div>
+                    <div class="fotowoltaika hidden">
+                        <h1 class="services-content-header">Fotowoltaika</h1>
                     </div>
                 </div>
             </div>
+
+            
             
 
             <footer class="footer" id="contact">
